route/my-virtualservice-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myvs
spec:
  hosts:
    - za2
  http:
  - route:
    - destination:
        host: za2
        subset: aa
    fault:
      delay:
        percent: 50
        fixedDelay: 5s
